# Web-Remote-Control

./: Keyboard  Performance  README.md  ToDo.md  main.py  requirements.txt  shot  test.jpf  test.py
HttpApi/ClientHandler/: CheckAlive.py  GetImage.py  Handler.py  Keyboard.py  KeyboardHandler.py  Main.py  Mouse.py  MouseHandler.py
HttpApi/FireWallPermissions/: CheckPermission.py
HttpApi/HostHandler/: CheckAlive.py  Handler.py  Keyboard.py  KeyboardHandler.py  Main.py  Mouse.py  MouseHandler.py  SendImage.py
HttpApi/Http/: Server.py
HttpApi/WebSocket/: Server.py
Machine_Client/: main.py  md5.py  private.pem  public.pem
Machine_Client/Http/: Client.py  Server.py
Machine_Client/Images/: ConvertToBase64.py  ImageDifference.py  ScreenShot.py
Machine_Client/RemoteControl/: HandShake.py  RemoteControl.py  util.py
Machine_Client/Rsa/: RandomKey.py  private.pem  receiver.pem
RemoteMachine/ClientHandler/: CheckAlive.py  GetImage.py  Handler.py  Keyboard.py  Mouse.py
RemoteMachine/HandShake/: TcpHandShake.py  UdpHandShake.py
Server/: Clients_Data.py  GetImageFromMachineClient.py  Main.py  SQL.py  main.py  pythonsqlite.db  test.py
Server/HTTP_Server/Image/Images/: Cargo.toml
Server/HTTP_Server/Image/Images/src/: main.rs
Server/HTTP_Server/wasm/web-client/: Cargo.toml
Server/HTTP_Server/wasm/web-client/pkg/: package.json  web_client.js  web_client_bg.js  web_client_bg.wasm  web_client_bg.wasm.d.ts
Server/HTTP_Server/wasm/web-client/src/: Buffer.rs  WebSocket.rs  http.rs  lib.rs  md5_encryption.rs
punch-hole-test/: client.py
(+101 files in other folders)
