[package]
name = "Images"
version = "0.1.0"
authors = ["boaz tene <boaztene2005@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }