[package]
name = "Images"
version = "0.1.0"
authors = ["boaz tene <boaztene2005@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5"
png = "0.16.8"

# [dependencies.png]
# version="0.16.8"
# features=["HasParameters"]