[package]
name = "web-client"
version = "0.1.0"
authors = ["boaz tene <boaztene2005@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.19"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
md5 = "0.7.0"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'Location',
  'CustomEvent',
  'CustomEventInit',
  'HtmlImageElement'
]
